<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.hotel.hotelroomreservation.activities.AboutHotelActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/hotelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocean_hotel"
            android:textAppearance="@style/TitleText"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actual_hotel_address"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:text="@string/phone_text"
            android:theme="@style/TitleText"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:drawableLeft="@drawable/ic_local_post_office_black_24dp"
            android:text="@string/email_text"
            android:theme="@style/TitleText"/>
    </LinearLayout>
</LinearLayout>
