<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.RoomActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headerRoomDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/room_details"
                android:theme="@style/PrintText" />

            <LinearLayout
                android:id="@+id/sectionRoomDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/headerRoomDetails"
                android:background="@color/white"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/arrival_textInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/arrival_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                        android:focusable="false"
                        android:hint="@string/arrival"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/departure_textInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/departure_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                        android:focusable="false"
                        android:hint="@string/departure"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/headerPersonalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sectionRoomDetails"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/personal_info"
                android:theme="@style/PrintText" />

            <LinearLayout
                android:id="@+id/sectionPersonalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/headerPersonalInfo"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="8dp">

                <EditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="20"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/surnameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:maxLength="20"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_local_post_office_black_24dp"
                    android:maxLength="20"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/phoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:drawableLeft="@drawable/ic_call_black_24dp"
                    android:maxLength="20"
                    android:maxLines="1" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/makeReservation"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/make_reservation" />
</LinearLayout>
