<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RoomActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/linearLayoutReservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/roomPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/room_image"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/roomName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/roomPhoto"
                android:layout_margin="12dp"
                android:background="@color/transparentBlack"
                android:text="@string/room_name"
                android:theme="@style/PrintText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/roomPhoto"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <RatingBar
                    android:id="@+id/ratingStarBar"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/roomVisitors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guests"
                    android:theme="@style/PrintPrimaryText" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/roomPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:theme="@style/TitleText" />

                <TextView
                    android:id="@+id/roomPriceInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_info" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
