<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activities.RoomActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headerRoomDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/room_details"
                android:theme="@style/PrintText" />

            <LinearLayout
                android:id="@+id/sectionRoomDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/arrival_textInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/arrival_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:paddingTop="10dp"
                        android:hint="@string/arrival"
                        android:theme="@style/PrintText" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/departure_textInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/departure_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:hint="@string/departure"
                        android:theme="@style/PrintText" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/headerPersonalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/personal_info"
                android:theme="@style/PrintText" />

            <LinearLayout
                android:id="@+id/sectionPersonalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- Name, Surname, email -->

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/makeReservation"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/make_reservation" />
</LinearLayout>
