<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.hotel.hotelroomreservation.activities.RoomFinderActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/arrival_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/arrival_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/arrival"
                android:textSize="21sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/departure_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/arrival_textInput"
            android:orientation="vertical"
            android:paddingTop="10dp"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/departure_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/departure"
                android:textSize="21sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/guests_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/departure_textInput"
            android:paddingTop="15dp"
            android:text="@string/guests"
            android:textAppearance="@style/HintText" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/departure_textInput"
            android:layout_toRightOf="@id/guests_textView"
            android:paddingTop="20dp" />

        <LinearLayout
            android:id="@+id/linearLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/guests_textView"
            android:orientation="horizontal">

            <Button
                android:id="@+id/searchButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.5"
                android:onClick="searchRooms"
                android:text="@string/search" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.5"
                android:onClick="cancelSearch"
                android:text="@string/cancel" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
